Use Font-Awesome icons

--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -12,6 +12,7 @@
         {% bootstrap_css %}
         {% bootstrap_javascript jquery=1 %}
         <link href="{% static "css/style.css" %}" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <title>{% block title %}UrLab{% endblock %}</title>
         {% block head %}{% endblock %}
     </head>
