--- a/projects/templates/project_card.html
+++ b/projects/templates/project_card.html
@@ -33,7 +33,7 @@
       <p>{{ project.short_description }}</p>
       <p class="text-center">
           <a href="{% url "view_project" project.id %}" class="btn btn-primary" role="button">
-              <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+              <i class="fa fa-eye" aria-hidden="true"></i>
               Voir plus
           </a>
           <a href="#" class="btn btn-default" role="button">
