--- a/events/templates/event_detail.html
+++ b/events/templates/event_detail.html
@@ -41,7 +41,7 @@
     {% if event.meeting %}
         <h2>Membres présents</h2>
         {{event.meeting.membersPresent.all|join:","|default:"Aucun membre présent"}}
-        <a href=""><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a>
+        <a href=""><i class="fa fa-plus" aria-hidden="true"></i></a>
 
         <h2>Ordre du jour</h2>
         {{event.meeting.OJ|markdown}}
