--- a/space/templates/pamela.html
+++ b/space/templates/pamela.html
@@ -14,7 +14,7 @@
             <li>
                 <a href="{% url 'user_profile' user %}">{{user}}</a>
                 {% if user.has_key %}
-                    <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>
+                    <span class="fa fa-key" aria-hidden="true"></span>
                 {% endif %}
             </li>
         {% endfor %}
