Add our best cobol programmer to the UrLab banking system.

--- a/users/templates/balance.html
+++ b/users/templates/balance.html
@@ -93,7 +93,7 @@
 <pre class="text-muted">
 000100 IDENTIFICATION DIVISION.
 000200 PROGRAM-ID.     URLABBANKINGSYSTEM.
-000300
+000300 AUTHOR. Asta
 000400*
 000500 ENVIRONMENT DIVISION.
 000600 CONFIGURATION SECTION.
