--- a/users/templates/user_detail.html
+++ b/users/templates/user_detail.html
@@ -18,6 +18,9 @@
             <small>({{user.first_name}} {{user.last_name}})</small>
         {% endif %}
     {% endif %}
+    {% if request.user == user %}
+        <a href="{% url 'user_edit' %}" class="btn btn-default">Editer</a>
+    {% endif %}
   </h1>
 </div>
 
