Add edit buttons

--- a/projects/templates/projects_home.html
+++ b/projects/templates/projects_home.html
@@ -14,8 +14,11 @@
 </div>
 <p>
     Vous trouverez ici une grande partie des projets (en cours, sous forme de proposition ou finis) à UrLab. Tous ces projets sont ouverts à tous, n'hésitez pas à vous rajouter dans un projet pour aider, apprendre ou juste regarder.
-    Vous êtes aussi invités à <a href="{% url "add_project" %}">ajouter vos propres projets</a>, n'ayez pas peur, on est ouverts à tout !
-
+    Vous êtes aussi invités à
+    <a class="btn btn-success btn-xs" href="{% url "add_project" %}">
+        ajouter vos propres projets
+        <span class="fa fa-plus" aria-hidden="true"></span>
+    </a>, n'ayez pas peur, on est ouverts à tout !
 </p>
 
 <div class="row">
