--- a/events/templates/event_detail.html
+++ b/events/templates/event_detail.html
@@ -10,7 +10,13 @@
 </ol>
 
 <div class="page-header">
-  <h1>{{event.title}}</h1>
+  <h1>
+    {{event.title}}
+    <a class="btn btn-default" href="{% url "edit_event" event.id %}">
+        <span class="fa fa-edit" aria-hidden="true"></span>
+        Editer
+    </a>
+  </h1>
 </div>
 
 <p>
