--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -10,7 +10,15 @@
 </ol>
 
 <div class="page-header">
-  <h1>{{project.title}} <small>{{project.short_description}}</small></h1>
+  <h1>
+    {{project.title}} <small>{{project.short_description}}</small>
+    <a class="btn btn-default" href="{% url "edit_project" project.id %}">
+        <span class="fa fa-edit" aria-hidden="true"></span>
+        Editer
+    </a>
+
+  </h1>
+
 </div>
 
 <div class="row">
