--- a/events/templates/event_time.html
+++ b/events/templates/event_time.html
@@ -1,4 +1,4 @@
-<span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
+<span class="fa fa-calendar" aria-hidden="true"></span>
 
 {% if event.has_no_duration %}
     Le {{event.start|date:"l d F Y"}}, à {{event.start|date:"H:m"}}.
@@ -9,6 +9,6 @@
 {% endif %}
 
 {% if event.place %}
-<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+<span class="fa fa-map-marker" aria-hidden="true"></span>
 {{event.place}}<br>
 {% endif %}
