--- a/events/templates/events_home.html
+++ b/events/templates/events_home.html
@@ -14,7 +14,7 @@
 <div class="row">
   <div class="col-md-6">
     <h1>
-        <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
+        <span class="fa fa-clock-o" aria-hidden="true"></span>
         Evénements futurs
     </h1>
     {% if future %}
@@ -22,7 +22,10 @@
             <h2><a href="{% url "view_event" event.id %}">{{ event.title }}</a></h2>
             {% include "event_time.html" %}
         {% endfor %}
-        <p><br><a href="{% url "add_event" %}">Proposer un événement</a></p>
+        <p><br><a href="{% url "add_event" %}" class="btn btn-success">
+          <span class="fa fa-plus" aria-hidden="true"></span>
+          Proposer un événement
+        </a></p>
     {% else %}
     Mamamia ! Il n'y a rien de prévu dans le futur ! Vite, <a href="{% url "add_event" %}">crée un événement</a> !
     {% endif %}
@@ -30,7 +33,7 @@
   </div>
   <div class="col-md-6">
       <h1>
-        <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
+        <span class="fa fa-clock-o" aria-hidden="true"></span>
         Evénements passés
     </h1>
     {% for event in past %}
