--- a/projects/templates/project_card.html
+++ b/projects/templates/project_card.html
@@ -36,10 +36,12 @@
               <i class="fa fa-eye" aria-hidden="true"></i>
               Voir plus
           </a>
-          <a href="#" class="btn btn-default" role="button">
+          {% if request.user != project.maintainer and request.user not in project.participants.all %}
+          <a href="{% url "project_add_participation" project.id %}" class="btn btn-default" role="button">
               <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
               Participer
           </a>
+          {% endif %}
       </p>
 
     </div>
