--- a/users/templates/balance.html
+++ b/users/templates/balance.html
@@ -18,6 +18,13 @@
   <h1>Votre ardoise <small>UBS© (UrLab banking system)</small></h1>
 </div>
 
+{% for message in messages %}
+    <div class="alert alert-success" role="alert">
+        {{ message }}
+    </div>
+{% endfor %}
+
+
 {% if request.user.balance < 0 %}
 <div class="alert alert-danger" role="alert">
     Vous êtes actuellement en <strong>négatif</strong> de <strong>{{request.user.absolute_balance }}€</strong>. Pensez à recherger rapidement.
@@ -47,7 +54,15 @@
               <tr>
                   <td class="col-md-3">{{product.name}}</td>
                   <td class="col-md-3">{{product.price}}€</td>
-                  <td class="col-md-3"><a href="">Acheter {% bootstrap_icon "shopping-cart" %}</a></td>
+                  <td class="col-md-3">
+                   <form action="{% url "balance_spend" %}" method="post" class="form">
+                      {% csrf_token %}
+                      <input type="hidden" name="value" value="{{product.price}}">
+                          <button type="submit" class="btn btn-default btn-xs">
+                              Acheter {% bootstrap_icon "shopping-cart" %}
+                          </button>
+                    </form>
+                  </td>
               </tr>
             {% endfor %}
           </tbody>
@@ -62,10 +77,11 @@
             Vous ne devriez pas dépenser alors que vous êtes en négatif.
         </div>
     {% endif %}
-    <form class="form-inline">
+    <form class="form-inline" action="{% url "balance_spend" %}" method="post">
+      {% csrf_token %}
       <div class="form-group">
         <div class="input-group">
-            <input type="text" class="form-control" id="exampleInputName2" placeholder="Montant">
+            <input type="text" class="form-control" name="value" placeholder="Montant">
             <div class="input-group-addon">€</div>
         </div>
       </div>
@@ -76,10 +92,11 @@
     <h2>Verser</h2>
     <p class="text-muted">Vous pouvez déponser directement l'argent dans la caisse.<br>
     Pour des gros montants, faites un virement au <strong>{{account}}</strong></p>
-    <form class="form-inline">
+    <form class="form-inline" action="{% url "balance_top" %}" method="post">
+      {% csrf_token %}
       <div class="form-group">
         <div class="input-group">
-            <input type="text" class="form-control" id="exampleInputName2" placeholder="Montant">
+            <input type="text" class="form-control" name="value" placeholder="Montant">
             <div class="input-group-addon">€</div>
         </div>
       </div>
