--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -45,6 +45,9 @@
 
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
+                        <li style="background-color: red">
+                                <p class="navbar-text" style="color: black;">This is ALPHA software ! Data may be lost at any moment</p>
+                        </li>
                         {% if request.user.is_authenticated %}
                             <li class="dropdown">
                               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
