Add a register form

--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -70,7 +70,7 @@
                             </li>
                         {% else %}
                             <li class="{% ifcontains "/auth/login" %}active{% endifcontains %}">
-                                <a href="{% url "login" %}">Login</a>
+                                <a href="{% url "login" %}">Login / Register</a>
                             </li>
                         {% endif %}
                     </ul>
