--- a/incubator/templates/registration/register.html
+++ b/incubator/templates/registration/register.html
@@ -1,9 +1,19 @@
 {% extends "base.html" %}
+{% load bootstrap3 %}
+
 
 {% block content %}
-<form action="" method="post">
+
+<form method="post" action="">
     {% csrf_token %}
-    {{ form}}
-    <input type="submit" value="Submit" />
+    {% bootstrap_form form %}
+    {% buttons %}
+    <button type="submit" class="btn btn-primary">
+        Créer un compte
+    </button>
+    {% endbuttons %}
 </form>
+
 {% endblock %}
+
+
