--- a/projects/templates/project_card.html
+++ b/projects/templates/project_card.html
@@ -2,9 +2,9 @@
   <div class="thumbnail">
     <a href="{% url "view_project" project.id %}">
     {% if not project.picture %}
-      <img src="/static/img/default-project.png" style="height: 15em">
+      <img src="/static/img/default-project.png" style="height: 15em; width:100%; object-fit: cover;">
     {% else %}
-      <img src="{{project.picture.url}}" style="height: 15em">
+      <img src="{{project.picture.url}}" style="height: 15em; width:100%; object-fit: cover;">
     {% endif %}
     </a>
     <div class="caption">
