--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -48,8 +48,10 @@
 
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li style="background-color: red">
-                                <p class="navbar-text" style="color: black;">This is ALPHA software ! Data may be lost at any moment</p>
+                        <li style="background-color: #337AB7">
+                                <p class="navbar-text" style="color: white;">
+                                    This is a Beta, do not play with money yet ;)
+                                </p>
                         </li>
                         {% if request.user.is_authenticated %}
                             <li class="dropdown">
