Fix project card height with long titles

--- a/projects/templates/project_card.html
+++ b/projects/templates/project_card.html
@@ -8,7 +8,7 @@
     {% endif %}
     </a>
     <div class="caption">
-      <h3>
+      <h3 style="height: 2em;">
           {{ project.title }}
       </h3>
       {% if project.status == 'i' %}
