--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -53,11 +53,21 @@
     <a href="{% url 'user_profile' participant.username %}">{{participant.username}}</a>
     {% empty %}
         {% if user != project.maintainer %}
-            Il n'y a encore aucun participant, ajoutez vous !</br>
+            Il n'y a encore aucun participant, ajoutez vous !
         {% endif %}
     {% endfor %}
+    </br>
     {% if user != project.maintainer and user not in project.participants.all %}
-    <a href="{% url 'project_add_participation' project.id%}">Je participe</a>
+      <a href="{% url 'project_add_participation' project.id%}" class="btn btn-info btn-xs">
+        <i class="fa fa-child"></i>
+        Je veux participer ! </br>
+      </a></br>
+    {% endif %}
+    {% if user in project.participants.all %}
+      <a href="{% url 'project_remove_participation' project.id%}" class="btn btn-default btn-xs">
+        <i class="fa fa-times"></i>
+        Ne plus participer</br>
+      </a></br>
     {% endif %}
     <br>
     {% if project.picture %}
