Add a coma between users in projects

--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -50,7 +50,7 @@
         <strong>Participant{{project.participants.all|pluralize}} :</strong>
     {% endif %}
     {% for participant in project.participants.all %}
-    <a href="{% url 'user_profile' participant.username %}">{{participant.username}}</a>
+      <a href="{% url 'user_profile' participant.username %}">{{participant.username}}</a>{% if not forloop.last %}, {% endif %}
     {% empty %}
         {% if user != project.maintainer %}
             Il n'y a encore aucun participant, ajoutez vous !
