--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -15,13 +15,15 @@
         {% bootstrap_javascript jquery=1 %}
         <link href="{% static "css/style.css" %}" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-        {% render_block "css" %}
         <title>{% block title %}UrLab{% endblock %}</title>
+        {% render_block "css" %}
         {% block head %}{% endblock %}
     </head>
-    <body>
-
-        <nav class="navbar navbar-default navbar-static-top navbar-inverse">
+    <header class="base-header">
+        <div id="home-logo"><a href="/"><img id="home-logo-image" src="/static/img/space-invaders.png"/></a></div>
+    </header>
+    <body class="base-body">
+        <nav class="navbar navbar-default navbar-static-top navbar-inverse" style="background-color: #2F2F38;">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menuNavbar">
@@ -84,4 +86,7 @@
         </div>
         {% render_block "js" %}
     </body>
+    <footer class="base-footer">
+        
+    </footer>
 </html>
