--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,3 +2,44 @@
     height: 3em;
     overflow: hidden;
 }
+
+.base-header {
+	width: 100%;
+	max-height: 200px;
+	margin-top: 5px;
+	vertical-align: bottom;
+
+	/*height: 200px*/
+}
+
+.base-body {
+	min-height: 100%;
+	z-index: 999;
+	background-color: rgba(255,255,255,1);
+}
+
+.base-footer {
+	width: 100%;
+	height: 200px;
+	background-color: #BBBBBB;
+}
+
+#home-logo {
+	width: 100%;
+	text-align: center;
+	background-image:linear-gradient(white, #97F);
+
+	/*position: fixed;*/
+}
+
+#home-logo-image {
+	width: 50%;
+	margin: auto;
+	height: auto;
+	max-height: 160px;
+	max-width: 324px;
+	overflow: hidden;
+
+	/*position: fixed;
+	z-index: 1;*/
+}
