--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,8 @@
 	/*height: 200px*/
 }
 
+.
+
 .base-body {
 	min-height: 100%;
 	z-index: 999;
@@ -19,9 +21,12 @@
 }
 
 .base-footer {
+	margin: 0;
 	width: 100%;
-	height: 200px;
+	height: 250px;
 	background-color: #BBBBBB;
+	background-image: url('/static/img/terminal.jpg');
+	background-size: contain 100%;
 }
 
 #home-logo {
@@ -42,4 +47,50 @@
 
 	/*position: fixed;
 	z-index: 1;*/
+}
+
+.base-map {
+	border: 0px;
+	display: inline;
+	padding: 0;
+}
+
+.base-map iframe {
+	border: 0px;
+	margin: 0;
+	/*float: right;*/
+}
+
+.base-footer-opening {
+	height: 100%
+}
+
+.base-footer p {
+	font-family: "Courier New", Courier, monospace;
+	color: #23FF23;
+}
+
+.base-footer-info {
+	padding-top: 25px;
+	height: 100%
+	color: #23FF23;
+}
+
+.base-footer ul {
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
+}
+
+.base-footer ul li {
+    padding-left: 2em;
+    text-indent: -2em;
+    color: #23FF23;
+}
+
+.base-footer ul li:before {
+    content: "$>";
+    padding-right: 5px;
+    font-family: "Courier New", Courier, monospace;
+    color: #23FF23;
 }
