Fixed the footer overflow and the minimal page height

--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -88,24 +88,26 @@
         </div>
         {% render_block "js" %}
     </body>
-    <footer class="base-footer row">
-        <div class="col-sm-4 base-footer-opening">
-            <p style="margin-top:25px;">Probabilités d'ouvertures ici /!\</p>
-        </div>
-        <div class="col-sm-5 base-footer-info">
-            <p>
-                <u>info</u>
-            </p>
-            <ul>
-                <li>Contacts</li>
-                <li>Club-mate</li>
-                <li>Photos</li>
-                <li>PDS</li>
-                <li>Etc...</li>
-            </ul>
-        </div>
-        <div class="col-sm-3 base-map">
-            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=zPnchbKdsavc.kWC7JrWya-pE&z=14" width="100%" height="250px"></iframe>
+    <footer class="base-footer conatainer">
+        <div class="row base-footer-row">
+            <div class="col-sm-4 base-footer-opening">
+                <p style="margin-top:25px;">Probabilités d'ouvertures ici /!\</p>
+            </div>
+            <div class="col-sm-5 base-footer-info">
+                <p>
+                    <u>info</u>
+                </p>
+                <ul>
+                    <li>Contacts</li>
+                    <li>Club-mate</li>
+                    <li>Photos</li>
+                    <li>PDS</li>
+                    <li>Etc...</li>
+                </ul>
+            </div>
+            <div class="col-sm-3 base-map">
+                <iframe src="https://www.google.com/maps/d/u/0/embed?mid=zPnchbKdsavc.kWC7JrWya-pE&z=14" width="100%" height="250px"></iframe>
+            </div>
         </div>
     </footer>
 </html>
