New footer display

--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -95,7 +95,7 @@
             </div>
             <div class="col-sm-5 base-footer-info">
                 <p>
-                    <u>info</u>
+                    <u class="green">info</u>
                 </p>
                 <ul>
                     <li>Contacts</li>
