--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -88,12 +88,12 @@
         </div>
         {% render_block "js" %}
     </body>
-    <footer class="base-footer conatainer">
-        <div class="row base-footer-row">
-            <div class="col-sm-4 base-footer-opening">
+    <footer class="container base-footer"> <!-- base-footer -->
+        <div class="row"> <!-- base-footer-row -->
+            <div class="col-lg-4"> <!-- base-footer-opening -->
                 <p style="margin-top:25px;">Probabilités d'ouvertures ici /!\</p>
             </div>
-            <div class="col-sm-5 base-footer-info">
+            <div class="col-lg-4 base-footer-info"> <!-- base-footer-info -->
                 <p>
                     <u class="green">info</u>
                 </p>
@@ -105,7 +105,7 @@
                     <li>Etc...</li>
                 </ul>
             </div>
-            <div class="col-sm-3 base-map">
+            <div class="col-lg-4 base-map"> <!-- base-map -->
                 <iframe src="https://www.google.com/maps/d/u/0/embed?mid=zPnchbKdsavc.kWC7JrWya-pE&z=14" width="100%" height="250px"></iframe>
             </div>
         </div>
