--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,6 @@
 	max-height: 200px;
 	margin-top: 5px;
 	vertical-align: bottom;
-	/*height: 200px*/
 }
 
 html {
@@ -21,18 +20,13 @@ body {
 
 .base-body {
 	background-color: rgba(255,255,255,1);
-	margin-bottom: 250px;
 	position:relative;
+	min-height: 100%;
 }
 
 .base-footer {
-	margin: 0;
+	margin-top: 100px;
 	width: 100%;
-	height: 250px;
-	position: absolute;
-	bottom: -255px;
-	left: 0px;
-	overflow: hidden;
 	background-color: #BBBBBB;
 }
 
@@ -40,8 +34,6 @@ body {
 	width: 100%;
 	text-align: center;
 	background-image:linear-gradient(white, #97F);
-
-	/*position: fixed;*/
 }
 
 #home-logo-image {
@@ -51,9 +43,6 @@ body {
 	max-height: 160px;
 	max-width: 324px;
 	overflow: hidden;
-
-	/*position: fixed;
-	z-index: 1;*/
 }
 
 .base-footer-row {
@@ -75,8 +64,6 @@ body {
 .base-map iframe {
 	border: 0px;
 	margin: 0px;
-
-	/*float: right;*/
 }
 
 div.col-sm-3.base-map {
@@ -98,7 +85,7 @@ div.col-sm-3.base-map {
 
 .base-footer-info {
 	padding-top: 25px;
-	height: 100%;
+	height: 250px;
 	color: #23FF23;
 	background-color: #BBBBBB;
 	background-image: url('/static/img/terminal.jpg');
