[Add] Opening examples in footer

--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -90,8 +90,8 @@
     </body>
     <footer class="container base-footer"> <!-- base-footer -->
         <div class="row"> <!-- base-footer-row -->
-            <div class="col-lg-4"> <!-- base-footer-opening -->
-                <p style="margin-top:25px;">Probabilités d'ouvertures ici /!\</p>
+            <div class="col-lg-4 base-footer-opening"> <!-- base-footer-opening -->
+                <img src="/static/img/opening/week-2w.png" width="100%" height="auto"/>
             </div>
             <div class="col-lg-4 base-footer-info"> <!-- base-footer-info -->
                 <p>
