--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 .base-footer {
-	margin-top: 100px;
+	margin-top: 75px;
 	width: 100%;
 	background-color: #BBBBBB;
 }
@@ -71,7 +71,12 @@ div.col-sm-3.base-map {
 }
 
 .base-footer-opening {
-	height: 100%
+	height: 250px;
+	margin-left: 0;
+	margin-right: 0;
+	padding-left: 0;
+	padding-right: 0;
+	overflow: scroll;
 }
 
 .base-footer p {
