--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -90,10 +90,10 @@
     </body>
     <footer class="container base-footer"> <!-- base-footer -->
         <div class="row"> <!-- base-footer-row -->
-            <div class="col-lg-4 base-footer-opening"> <!-- base-footer-opening -->
+            <div class="col-sm-4 base-footer-opening"> <!-- base-footer-opening -->
                 <img src="/static/img/opening/week-2w.png" width="100%" height="auto"/>
             </div>
-            <div class="col-lg-4 base-footer-info"> <!-- base-footer-info -->
+            <div class="col-sm-4 base-footer-info"> <!-- base-footer-info -->
                 <p>
                     <u class="green">info</u>
                 </p>
@@ -105,7 +105,7 @@
                     <li>Etc...</li>
                 </ul>
             </div>
-            <div class="col-lg-4 base-map"> <!-- base-map -->
+            <div class="col-sm-4 base-map"> <!-- base-map -->
                 <iframe src="https://www.google.com/maps/d/u/0/embed?mid=zPnchbKdsavc.kWC7JrWya-pE&z=14" width="100%" height="250px"></iframe>
             </div>
         </div>
