[Add] Drop shadows

--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -23,7 +23,7 @@
         <div id="home-logo"><a href="/"><img id="home-logo-image" src="/static/img/space-invaders.png"/></a></div>
     </header>
     <body class="base-body">
-        <nav class="navbar navbar-default navbar-static-top navbar-inverse" style="background-color: #2F2F38;">
+        <nav class="navbar navbar-default navbar-static-top navbar-inverse navbar-shadow" style="background-color: #2F2F38;">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menuNavbar">
@@ -94,9 +94,6 @@
                 <img src="/static/img/opening/week-2w.png" width="100%" height="auto"/>
             </div>
             <div class="col-sm-4 base-footer-info"> <!-- base-footer-info -->
-                <p>
-                    <u class="green">info</u>
-                </p>
                 <ul>
                     <li>Contacts</li>
                     <li>Club-mate</li>
