--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,14 +10,6 @@
 	vertical-align: bottom;
 }
 
-html {
-	height: 100%;
-}
-
-body {
-	height: 100%;
-}
-
 .base-body {
 	background-color: rgba(255,255,255,1);
 	position:relative;
@@ -28,6 +20,15 @@ body {
 	margin-top: 75px;
 	width: 100%;
 	background-color: #BBBBBB;
+	-webkit-box-shadow: 0px -9px 43px -4px rgba(61,61,61,0.5);
+	-moz-box-shadow: 0px -9px 43px -4px rgba(61,61,61,0.5);
+	box-shadow: 0px -9px 43px -4px rgba(61,61,61,0.5);
+}
+
+.navbar-shadow{
+	-webkit-box-shadow: 0px 9px 43px -4px rgba(61,61,61,0.5);
+	-moz-box-shadow: 0px 9px 43px -4px rgba(61,61,61,0.5);
+	box-shadow: 0px 9px 43px -4px rgba(61,61,61,0.5);
 }
 
 #home-logo {
@@ -89,31 +90,43 @@ div.col-sm-3.base-map {
 }
 
 .base-footer-info {
-	padding-top: 25px;
+	padding: 0;
 	height: 250px;
 	color: #23FF23;
-	background-color: #BBBBBB;
 	background-image: url('/static/img/terminal.jpg');
 	background-size: 100% 100%;
+}
+
+.shadow {
+	height: 250px;
+	width: 100%;
+	z-index: 100;
+	position: absolute;
+	-webkit-box-shadow: inset 0px -20px 80px -10px rgba(0,0,0,1);
+	-moz-box-shadow: inset 0px -20px 80px -10px rgba(0,0,0,1);
+	box-shadow: inset 0px -20px 80px -10px rgba(0,0,0,1);
 }
 
 .base-footer ul {
     list-style: none;
     margin-left: 0;
     padding-left: 0;
+    padding: 25px;
 }
 
 .base-footer ul li {
     padding-left: 2em;
     text-indent: -2em;
-    color: #23FF23;
+    color: #55FF55;
+    text-shadow: 0px 0px 4px #23FF23;
 }
 
 .base-footer ul li:before {
     content: "$>";
     padding-right: 5px;
     font-family: "Courier New", Courier, monospace;
-    color: #23FF23;
+    color: #55FF55;
+    text-shadow: 0px 0px 4px #23FF23;
 }
 
 .slimg {
@@ -121,9 +134,4 @@ div.col-sm-3.base-map {
   height: 270px;
   max-height: 270px;
   vertical-align: middle;
-}
-
-.slimg img {
-	/*height: 225px;*/
-	/*width: auto;*/
 }
