--- a/incubator/templates/home.html
+++ b/incubator/templates/home.html
@@ -35,52 +35,12 @@
 
         <p>UrLab est un lieu de rencontre pour les étudiants intéressés par la technologie. C’est un lieu où l’on développe ses projets et l’on partage ses connaissances par l’intermédiaire d’ateliers et de conférences.</p>
   </div>
-  <!-- <div class="col-md-4 well">
+  <div class="col-md-4 well">
     <p>UrLab se trouve sur le campus du Solbosh, à l'ULB et est ouvert à tout le monde.</p>
     <iframe width='100%' height='300px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/c4ptaincrunch.o1n42mc8/attribution,zoompan,zoomwheel,geocoder.html?access_token=pk.eyJ1IjoiYzRwdGFpbmNydW5jaCIsImEiOiJUdWVRSENNIn0.qssi5TBLeBinBsXkZKiI6Q#14/50.812919/4.38443799999999'></iframe>
     <p>
     Pour savoir si nous sommes ouverts et qui s'y trouve actuellement, allez demander à <a href="">Pamela</a></p>
-  </div> -->
-      <div id="myCarousel" class="col-md-4 well carousel slide" data-ride="carousel" style="margin-top:30px;">
-          <p>UrLab se trouve sur le campus du Solbosh, à l'ULB et est ouvert à tout le monde.</p>
-          <!-- Indicators -->
-          <!-- <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-            <li data-target="#myCarousel" data-slide-to="3"></li>
-          </ol> -->
-
-          <!-- Wrapper for slides -->
-          <div class="carousel-inner" role="listbox">
-            <div class="item active slimg">
-              <img src="/static/img/slideshow/urlab3.png" alt="urlab3">
-            </div>
-
-            <div class="item slimg">
-              <img src="/static/img/slideshow/arduino.jpg" alt="adruino">
-            </div>
-
-            <div class="item slimg">
-              <img src="/static/img/slideshow/leds.jpg" alt="leds">
-            </div>
-
-            <div class="item slimg">
-              <img src="/static/img/slideshow/reprap.jpg" alt="reprap">
-            </div>
-          </div>
-
-          <!-- Left and right controls -->
-          <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-          <p>Pour savoir si nous sommes ouverts et qui s'y trouve actuellement, allez demander à <a href="">Pamela</a></p>
-    </div>
+  </div>
 </div>
 
 {% endblock %}
