--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,33 +8,28 @@
 	max-height: 200px;
 	margin-top: 5px;
 	vertical-align: bottom;
+
+	/*height: 200px*/
 }
 
 .base-body {
-	background-color: rgba(255,255,255,1);
-	position:relative;
 	min-height: 100%;
+	z-index: 999;
+	background-color: rgba(255,255,255,1);
 }
 
 .base-footer {
-	margin-top: 75px;
 	width: 100%;
+	height: 200px;
 	background-color: #BBBBBB;
-	-webkit-box-shadow: 0px -9px 43px -4px rgba(61,61,61,0.5);
-	-moz-box-shadow: 0px -9px 43px -4px rgba(61,61,61,0.5);
-	box-shadow: 0px -9px 43px -4px rgba(61,61,61,0.5);
-}
-
-.navbar-shadow{
-	-webkit-box-shadow: 0px 9px 43px -4px rgba(61,61,61,0.5);
-	-moz-box-shadow: 0px 9px 43px -4px rgba(61,61,61,0.5);
-	box-shadow: 0px 9px 43px -4px rgba(61,61,61,0.5);
 }
 
 #home-logo {
 	width: 100%;
 	text-align: center;
 	background-image:linear-gradient(white, #97F);
+
+	/*position: fixed;*/
 }
 
 #home-logo-image {
@@ -44,94 +39,7 @@
 	max-height: 160px;
 	max-width: 324px;
 	overflow: hidden;
-}
 
-.base-footer-row {
-	height: 250px;
-	margin: 0px;
-	padding: 0px;
-}
-
-.base-map {
-	border: 0px;
-	height: 250px;
-	display: inline;
-	padding: 0;
-	margin: 0px;
-	padding: 0px !important;
-	overflow: hidden;
-}
-
-.base-map iframe {
-	border: 0px;
-	margin: 0px;
-}
-
-div.col-sm-3.base-map {
-	overflow: hidden;
-}
-
-.base-footer-opening {
-	height: 250px;
-	margin-left: 0;
-	margin-right: 0;
-	padding-left: 0;
-	padding-right: 0;
-	overflow: scroll;
-}
-
-.base-footer p {
-	font-family: "Courier New", Courier, monospace;
-	color: black;
-}
-
-.green {
-	color: #23FF23;
-}
-
-.base-footer-info {
-	padding: 0;
-	height: 250px;
-	color: #23FF23;
-	background-image: url('/static/img/terminal.jpg');
-	background-size: 100% 100%;
-}
-
-.shadow {
-	height: 250px;
-	width: 100%;
-	z-index: 100;
-	position: absolute;
-	-webkit-box-shadow: inset 0px -20px 80px -10px rgba(0,0,0,1);
-	-moz-box-shadow: inset 0px -20px 80px -10px rgba(0,0,0,1);
-	box-shadow: inset 0px -20px 80px -10px rgba(0,0,0,1);
-}
-
-.base-footer ul {
-    list-style: none;
-    margin-left: 0;
-    padding-left: 0;
-    padding: 25px;
-}
-
-.base-footer ul li {
-    padding-left: 2em;
-    text-indent: -2em;
-    color: #55FF55;
-    text-shadow: 0px 0px 4px #23FF23;
-}
-
-.base-footer ul li:before {
-    content: "$>";
-    padding-right: 5px;
-    font-family: "Courier New", Courier, monospace;
-    color: #55FF55;
-    text-shadow: 0px 0px 4px #23FF23;
-}
-
-.slimg {
-  width: auto;
-  height: 270px;
-  max-height: 270px;
-  vertical-align: middle;
+	/*position: fixed;
+	z-index: 1;*/
 }
