[fix] Project cards display

--- a/projects/templates/projects_home.html
+++ b/projects/templates/projects_home.html
@@ -21,10 +21,12 @@
     </a>, n'ayez pas peur, on est ouverts à tout !
 </p>
 
-<div class="row">
-    {% for project in projects %}
-        {% include "project_card.html" %}
-    {% endfor %}
-</div>
+{% for row in projects %}
+    <div class="row">
+        {% for project in row %}
+          {% include "project_card.html" %}
+        {% endfor %}
+    </div>
+{% endfor %}
 
 {% endblock %}
