--- a/projects/templates/project_card.html
+++ b/projects/templates/project_card.html
@@ -8,30 +8,27 @@
     {% endif %}
     </a>
     <div class="caption">
-      <h3 style="height: 2em;">
+      <h3 class="row-fluid">
           {{ project.title }}
       </h3>
-      {% if project.status == 'i' %}
-          <div class="progress">
+      <div class="row-fluid progress">
+          {% if project.status == 'i' %}
               <div class="progress-bar" role="progressbar" aria-valuenow="{{project.progress}}" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width:{{project.progress}}%">
-                {{project.progress}}%
-            </div>
-          </div>
-      {% elif project.status == 'f' %}
-          <div class="progress">
+                  {{project.progress}}%
+              </div>
+          {% elif project.status == 'f' %}
               <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width:100%">
-              <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>  Fini
-            </div>
-          </div>
-      {% else %}
-          <div class="progress">
+                  <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+                  Fini
+              </div>
+          {% else %}
               <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width:100%">
-              Proposition
-            </div>
-          </div>
-      {% endif %}
-      <p class="project-card-description">{{ project.short_description }}</p>
-      <p class="text-center">
+                  Proposition
+              </div>
+          {% endif %}
+      </div>
+      <p class="row-fluid project-card-description">{{ project.short_description }}</p>
+      <p class="row-fluid text-center">
           <a href="{% url "view_project" project.id %}" class="btn btn-primary" role="button">
               <i class="fa fa-eye" aria-hidden="true"></i>
               Voir plus
