--- a/events/templates/event_time.html
+++ b/events/templates/event_time.html
@@ -1,6 +1,8 @@
 <span class="fa fa-calendar" aria-hidden="true"></span>
 
-{% if event.has_no_duration %}
+{% if event.start == None %}
+    Cet événement n'a pas encore de date prévue
+{% elif event.has_no_duration %}
     Le {{event.start|date:"l d F Y"}}, à {{event.start|date:"H:m"}}.
 {% elif event.is_only_a_day %}
     Le {{event.start|date:"l d F Y"}}, de {{event.start|date:"H:m"}} à {{event.stop|date:"H:m"}}.
@@ -10,5 +12,7 @@
 
 {% if event.place %}
 <span class="fa fa-map-marker" aria-hidden="true"></span>
-{{event.place}}<br>
+{{event.place}}
 {% endif %}
+
+<br>
