--- a/events/templates/events_home.html
+++ b/events/templates/events_home.html
@@ -8,13 +8,19 @@
 </ol>
 
 <div class="page-header">
-  <h1>Événements à UrLab</h1>
+  <h1>
+    Événements à UrLab
+    <a href="{% url "add_event" %}" class="btn btn-success">
+      <span class="fa fa-plus" aria-hidden="true"></span>
+          Proposer un événement
+    </a>
+  </h1>
 </div>
 
 <div class="row">
   <div class="col-md-6">
     <h1>
-        <span class="fa fa-clock-o" aria-hidden="true"></span>
+        <span class="fa fa-calendar-o" aria-hidden="true"></span>
         Evénements futurs
     </h1>
     {% if future %}
@@ -22,23 +28,32 @@
             <h2><a href="{% url "view_event" event.id %}">{{ event.title }}</a></h2>
             {% include "event_time.html" %}
         {% endfor %}
-        <p><br><a href="{% url "add_event" %}" class="btn btn-success">
-          <span class="fa fa-plus" aria-hidden="true"></span>
-          Proposer un événement
-        </a></p>
     {% else %}
     Mamamia ! Il n'y a rien de prévu dans le futur ! Vite, <a href="{% url "add_event" %}">crée un événement</a> !
     {% endif %}
 
   </div>
   <div class="col-md-6">
-      <h1>
+    <h1>
+      <span class="fa fa-flask" aria-hidden="true"></span>
+      Incubateur à événement
+    </h1>
+    {% for event in incubation %}
+        <h2><a href="{% url "view_event" event.id %}">{{ event.title }}</a></h2>
+        {% include "event_time.html" %}
+    {% empty %}
+      <p>Il n'y a aucun événement en incubation pour l'instant</p>
+    {% endfor %}
+
+    <h1>
         <span class="fa fa-clock-o" aria-hidden="true"></span>
         Evénements passés
     </h1>
     {% for event in past %}
         <h2><a href="{% url "view_event" event.id %}">{{ event.title }}</a></h2>
         {% include "event_time.html" %}
+    {% empty %}
+      <p>Il n'y a aucun événement passé, future is NOW !</p>
     {% endfor %}
   </div>
 </div>
