[Sty] Switch to classic and more thinner style

--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -94,11 +94,11 @@
             </div>
             <div class="col-sm-4 base-footer-info"> <!-- base-footer-info -->
                 <ul>
-                    <li>Contacts</li>
-                    <li>Club-mate</li>
-                    <li>Photos</li>
-                    <li>PDS</li>
-                    <li>Etc...</li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/space/pamela">Pamela</a></li>
+                    <li><a href="/wiki/">Wiki</a></li>
+                    <li></li>
+                    <li>...</li>
                 </ul>
             </div>
             <div class="col-sm-4 base-map"> <!-- base-map -->
